# hoff

./: .envrc  .gitignore  default.nix  hoff.cabal  notes.org
nix/: sources.json
python/: HoffSerialise.py
src/: Dev.hs  Hoff.hs
src/Hoff/: Asd.hs  Dict.hs  Examples.hs  H.hs  HSql.hs  Iterable.hs  JSON.hs  Python.hs  Serialise.hs  Show.hs  Table.hs  Table_wrapped_sum.hs  Tests.hs  Utils.hs  Vector.hs
src/Hoff/H/: Unsafe.hs
src/Hoff/HSql/: Operators.hs  TH.hs
src/Hoff/Table/: Operations.hs  Show.hs  Types.hs
src/Hoff/WorkInProgress/: GroupingOnTableLevel.hs
test/: Test.hs
